fix: sql encoding and update readme

--- a/README
+++ b/README
@@ -1,5 +1,19 @@
-Current Status:
-[x] - Database design and development.
-[ ] - Data Access Layer (Next Phase).
-[ ] - Business Layer.
-[ ] - RESTful APIs Development & Securing.
+## Current Status
+- [x] Database design and development.
+- [ ] Data Access Layer (Next Phase).
+- [ ] Business Layer.
+- [ ] RESTful APIs Development & Securing.
+
+---
+
+## Project Overview
+This is the complete version of the DB, includes:
+- Tables
+- Views
+- Stored Procedures
+- After Triggers
+
+### Architecture & Design
+Implemented using **N-Tier Architecture** principles. The project utilizes **Data Abstraction** and **Encapsulation** by handling logic through Stored Procedures and Views. 
+
+This completes the **Data Tier**. The next stage will focus on the **Data Access Layer**, followed by the **Business Layer** and **RESTful API** development for a full **3-Tier Architecture**.
